# terminal_programs

./: .gitignore  terminal_program_aliases.sh
files_sync/: Cargo.toml
files_sync/src/: lib.rs  main.rs  tests.rs
filesync/: Cargo.toml
filesync/src/: args_parse.rs  lib.rs  main.rs  structures.rs  tests.rs
table_formatter/: COMPILE.sh  Cargo.toml  TEST.sh
table_formatter/old_and_poc/: format_into_columns.py  table_formatter.py  test.py
table_formatter/src/: main.rs  tests.rs
table_formatter/testing/: edf4.1_ranger_testfile.csv  non_utf8.txt
