
[package]
name = "filesync"
version = "0.1.0"
edition = "2021"
description = "Sync dir contents in an orderly manner"

[dependencies]
blake3 = "1.8.2"
test-case = "3.3.1"
walkdir = "2.5.0"
clap = { version = "4.5.53", features = ["derive"] }
os_str_bytes = { version = "7.1.1", features = ["conversions"] }
serde_json = "1.0.148"
base64 = "0.22.1"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
test-case = "3.3.1"
rayon = "1.11.0"

