
[package]
name = "table_formatter"
version = "0.1.0"
edition = "2021"
description = "Align whitespace-delimited columns into a neat table"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
regex = "1.11.1"
rayon = "1.10"
console = "0.15.11"
itertools = "0.14.0"

[dev-dependencies]
assert_cmd = "2.0.17"
tempfile = "3.20.0"
test-case = "3.3.1"

[features]
cli_tests = []
